[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/HUDScene.gd" type="Script" id=1]
[ext_resource path="res://src/ui/CharStatus.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/NotificationText.tscn" type="PackedScene" id=3]

[node name="HUDScene" type="Control"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1009.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 994.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 328.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerStatus" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 328.0
margin_bottom = 187.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 661.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyStatus" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 329.0
margin_bottom = 187.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 665.0
margin_right = 994.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimeLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 329.0
margin_bottom = 14.0

[node name="GoonsCountLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 329.0
margin_bottom = 32.0

[node name="TimeUntilWaveLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 329.0
margin_bottom = 50.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 994.0
margin_bottom = 378.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Banners" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 994.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 994.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Notifications" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 994.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="EnemyStatusTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EnemyStatusTimer" to="." method="_on_EnemyStatusTimer_timeout"]
